*

- Added new object class - NetworkService, for simplified network service
  health checking
- Server internal synchronization mechanisms improved to increase
  stability and performance
- Fixed deadlock sometimes caused by retrieving DCI collected data
- Added parameters System.Hostname, System.Uname and System.Uptime to
  Solaris subagent
- Object status now recalculated after binding change


*
* 0.1.11
*

- Fixed incorrect behavior of Process.Count() parameter under Linux and
  FreeBSD


*
* 0.1.10
*

- Support for centralized upgrade added to agents
- Implemented agent packages upload to server from console
- New parameters added to Solaris subagent
- Alarm deletion implemented
- Implemented all delta calculation methods for DCI
- Implemented thresholds for average values
- Fixed bug with policy editor header drawing


*
* 0.1.9
*

- Added support for server modules
- Initial version of web interface created (for Microsoft IIS)
- Microsoft SQL driver improved
- Added file upload to agents (as preparation for centralized agent update)
- Client library redesigned to support multiple connections within
  one process
- Windows console: added automatic refresh in graphs
- Very basic Solaris subagent added


*
* 0.1.8
*

- Added support for System.CPU.Count and System.ProcessList parameters
  under Windows
- Created our own SNMP library (currently SNMP versions 1 and 2c are
  supported). Server is no longer needs net-snmp library. 
- Component locks moved to RAM from SQL database
- Added support for SNMP traps
- Removed access right "View server configuration" as unneeded
- Windows console: Added sorting to event selection dialog
- Windows console: Objects in object browser are now sorted with respect
  to IP addresses when object name is an IP address
- Windows console: Fixed bug with MDI window position restoration when
  window is maximized
- Windows console: Fixed bug with duplication of child window title in
  parent's title when child is maximized