@@ -85,7 +85,6 @@ WINDOWS CONSOLE:
 
 - Find good graph creation library
 - Enlarge 16x16 status overlay icons
-- Add primary IP address selection 
 - Add real-time graphs
 - Play sound on new alarms
 - Add sorting to all list views
