@@ -10,6 +10,7 @@
 - Added parameters System.Hostname, System.Uname and System.Uptime to
   Solaris subagent
 - Object status now recalculated after binding change
+- Implemented primary IP address selection for nodes
 
 
 *
